<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".Events.AddEventActivity">


    <TextView
        android:id="@+id/tvAddEventsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:text="@string/add_events"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.061"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlHardcoded" />


    <ImageButton
        android:id="@+id/btnHomeEvents"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="28dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_home_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEventName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/event_name"
        android:textColor="@color/black"
        android:textColorHint="#999999"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvAddEventsTitle"
        android:layout_margin="16dp" />

    <EditText
        android:id="@+id/etEventLocation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="@color/black"
        android:hint="@string/event_location"
        android:textColorHint="#999999"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEventName"
        android:layout_margin="16dp" />

    <TextView
        android:id="@+id/tvSelectDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/select_date"
        android:clickable="false"
        android:cursorVisible="false"
        android:focusable="false"
        android:focusableInTouchMode="false"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:textColorHint="#999999"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/etEventLocation"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        tools:ignore="TextFields,TextViewEdits" />

    <TimePicker
        android:id="@+id/timePicker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:timePickerMode="spinner"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:numbersTextColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/tvSelectDate"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/AddEvent"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_event"
        android:textColor="#000000"
        android:backgroundTint="#A020F0"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/timePicker"
        android:layout_margin="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>
