<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <TextView
        android:id="@+id/tvAddFriendTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:text="@string/add_friends"
        android:textColor="@color/black"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RelativeOverlap" />

    <ImageButton
        android:id="@+id/imageBtnHomeFriend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:padding="16dp"
        android:layout_marginTop="5dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:src="@drawable/baseline_home_24"
        app:tint="@color/black" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/tvAddFriendTitle"
        android:layout_marginTop="5dp"
        tools:ignore="UselessParent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:gravity="center"
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <ImageView
                        android:id="@+id/imageViewAddFriend"
                        android:layout_width="150dp"
                        android:layout_height="150dp"
                        android:layout_marginTop="30dp"
                        android:src="@drawable/person2" />
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp">

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="#607D8B">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColorHint="#607D8B"
                            android:id="@+id/firstName"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/first_name"
                            android:maxLines="1"
                            android:inputType="text"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxStrokeColor="#607D8B">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColorHint="#607D8B"
                            android:id="@+id/lastName"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/last_name"
                            android:maxLines="1"
                            android:inputType="text"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="#607D8B">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColorHint="#607D8B"
                            android:id="@+id/Age"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/age"
                            android:maxLines="1"
                            android:inputType="number"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        app:boxBackgroundColor="@color/white"
                        app:boxStrokeColor="#607D8B">

                        <com.google.android.material.textfield.TextInputEditText
                            android:textColorHint="#607D8B"
                            android:id="@+id/address"
                            android:paddingStart="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/address"
                            android:maxLines="1"
                            android:inputType="text"
                            tools:ignore="RtlSymmetry" />
                    </com.google.android.material.textfield.TextInputLayout>
                </LinearLayout>

                <RadioGroup
                    android:gravity="center"
                    android:orientation="horizontal"
                    android:id="@+id/genderGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/male"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="10dp"
                        android:checked="true"
                        android:text="@string/male" />

                    <RadioButton
                        android:id="@+id/female"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/female" />
                </RadioGroup>

                <Button
                    android:layout_gravity="center"
                    android:id="@+id/addButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="20dp"
                    android:text="@string/add" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
