<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/personal_organizer_system"
        android:textColor="@color/black"
        android:textSize="40sp"
        android:textStyle="bold"
        android:layout_marginTop="32dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <RelativeLayout
        android:id="@+id/friendsButtonLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageFriendsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="30dp"
            android:background="@drawable/btn_round_primary_bg"
            android:src="@drawable/baseline_person_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_margin="20dp"
            android:text="@string/friends"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/tasksButtonLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/titleTextView"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/imageTasksButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_round_primary_bg"
            android:backgroundTint="@color/red"
            android:layout_marginTop="30dp"
            android:src="@drawable/baseline_task_alt_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tasks"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="15dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/eventsButtonLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/friendsButtonLayout"
        app:layout_constraintStart_toStartOf="parent">

        <ImageButton
            android:id="@+id/imageEventsButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_round_primary_bg"
            android:backgroundTint="@color/yellow"
            android:layout_marginTop="15dp"
            android:src="@drawable/baseline_event_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/events"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/imagesButtonLayout"
        android:layout_width="150dp"
        android:layout_height="150dp"
        app:layout_constraintWidth_percent="0.4"
        app:layout_constraintDimensionRatio="1:1"
        app:layout_constraintTop_toBottomOf="@id/tasksButtonLayout"
        app:layout_constraintEnd_toEndOf="parent">

        <ImageButton
            android:id="@+id/mainImagesButton"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/btn_round_primary_bg"
            android:backgroundTint="@color/blue"
            android:layout_marginTop="15dp"
            android:src="@drawable/baseline_image_24"
            app:tint="@color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/images"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="24sp"
            android:layout_margin="25dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"/>
    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
